css/style.css
/* *************************************************
 *      Variables
 * *************************************************/
 :root {
    --primary-color: #11315a;
    --header-font: "Oswald", sans-serif;
    --body-font: "Inter", sans-serif;
 }

/* *************************************************
 *      Common Rules
 * *************************************************/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

h1,
h2,
h3 {
    padding: .5rem;
    color: var(--primary-color);
    font-family: var(--header-font);
}

p,
label,
button {
    padding: .5rem;
    font-family: var(--body-font);
}

a {
    text-decoration: none;
}

.hidden {
    display: none;
}

select{
    appearance: none;
    height: 50px;
    font-size: 1.2rem;
    border-radius: .5rem;
    text-align: center;
}

input {
    padding: .4rem;
    height: 50px;
    font-size: 1.1rem;
    text-align: center;
}

button {
    height: 50px;
    font-weight: 700;
    border-radius: .5rem;
    border: 1px solid rgba(0, 0, 0, .7);
}

button:active {
    background-color: var(--primary-color);
    color: white;
}

.hideBorder {
    border: none
}

/* *************************************************
 *      Header Rules
 * *************************************************/
#header {
    background-color: var(--primary-color);
    color: #fff;
    padding: 1rem;
}

#header h1 {
    color: #fff;
}

#header a {
    color: #fff;
    font-size: 1.2rem;
}

nav {
    display: flex;
    justify-content: space-evenly;
}

.active {
    text-decoration: overline;
}

/* *************************************************
 *      Footer Rules
 * *************************************************/
#footer {
    background-color: var(--primary-color);
    color: #fff;
    padding: 1rem;
}

/* *************************************************
 *      Week Form Rules
 * *************************************************/
#weekForm {
    margin: 1rem;
    display: grid;
    gap: .5rem;
}

#weekForm label {
    font-size: 1.2rem;
    font-weight: 700;
}

/* *************************************************
 *      Games View Rules
 * *************************************************/
.gameCard {
    margin: 1rem;
    padding: 1rem;
    border-radius: .5rem;
    box-shadow: 0 0 1rem rgba(0, 0, 0, .4);
    text-align: center;
    animation: faseIn 1.5s linear;
}

/* CSS animation */
@keyframes faseIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
  }

.gameScore {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

span.label {
    font-weight: 700;
}

.teamName {
    font-weight: 700;
}

.score {
    grid-column: 1/3;
    font-size: 1.5rem;
}

.scorePrediction {
    grid-column: 1/3;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.scorePrediction h3 {
    grid-column: 1/3;
    padding: .5rem;
}

.scorePrediction label {
    display: block;
    padding: .5rem;
}

.scorePrediction input {
    width: 50%;
}

.predictionButton {
    margin: 1rem;
    grid-column: 1/3;
}

#moreGameDetails {
    margin: auto auto;
    min-width: 300px;
    min-height: 300px;
}

::backdrop {
    background-color: rgba(0, 0, 0, .3);
}

#closeModal {
    padding: 1rem;
    margin: .5rem;
    color: red;
    font-weight: 700;
    font-size: 1rem;
}

/* *************************************************
 *      Rankings Rules
 * *************************************************/
 .rankItem {
    display: flex;
    justify-content: space-between;
    border: 1px solid rgba(0, 0, 0, .3);
    margin: 1rem;
    border-radius: .5rem;
    padding: .5rem;
    box-shadow: 0 0 1rem rgba(0, 0, 0, .4);
    animation: shadowIn 1.5s linear;
 }

 /* CSS animation */
 @keyframes shadowIn {
    from {
        box-shadow: none;
    }
    to {
        box-shadow: 0 0 1rem rgba(0, 0, 0, .4);
    }
 }

 .rankingList {
    padding: 1rem 0;
 }

/* *************************************************
 *      Larger Screen Rules
 * *************************************************/
 @media screen and (min-width: 700px) {
    main {
        max-width: 1500px;
        margin: 0 auto;
    }


    /* *************************************************
    *      Games View Rules - Large Screen
    * *************************************************/
    #games {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }

    /* *************************************************
    *      Week Form Rules - Large Screen
    * *************************************************/
    #weekForm {
        display: grid;
        grid-template-columns: auto 100px;
    }
 }

